[gd_scene load_steps=8 format=3 uid="uid://c6efwceppjp36"]

[ext_resource type="Script" path="res://scripts/UI/Main/MainMenu.gd" id="1_v1k7h"]
[ext_resource type="PackedScene" uid="uid://d1cpj26wd0fqw" path="res://scenes/entities/buff.tscn" id="2_s43ht"]
[ext_resource type="PackedScene" uid="uid://ch5ssq88yx1t6" path="res://scenes/UI/Main/Multiplayer/Multiplayer.tscn" id="3_8c6ax"]
[ext_resource type="PackedScene" uid="uid://bro2asdburtfg" path="res://scenes/UI/Main/Options/Options.tscn" id="4_41hkr"]
[ext_resource type="PackedScene" uid="uid://dwrjfxf12yrvt" path="res://scenes/UI/Main/NewGame/NewGame.tscn" id="5_vkava"]
[ext_resource type="PackedScene" uid="uid://b8ushcso2djve" path="res://scenes/UI/Main/Continue/Continue.tscn" id="6_v7v2s"]
[ext_resource type="PackedScene" uid="uid://dxbrrhpfd1qno" path="res://tests/TestMenu.tscn" id="7_te5ou"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v1k7h")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0

[node name="Buff" parent="CenterContainer" instance=ExtResource("2_s43ht")]
popup_disabled = true
particle_amount = 100
particle_scale_max = 5.0
particle_color = Color(0.679518, 0.0882298, 0.368955, 1)
particle_lifetime = 3.0
particle_spread = 20.0
particle_gravity = Vector2(5, 5)
particle_emission_shape = 6
sphere_radius = 10.0
ring_axis = Vector3(0, 0, 1)
ring_radius = 45.0
ring_inner_radius = 35.0
orb_color = Color(0.84956, 1.99743e-06, 3.85046e-07, 1)

[node name="Main" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "GameJam CYTech"
horizontal_alignment = 1

[node name="MarginContainer" type="HBoxContainer" parent="Main"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="Main/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.4
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Main/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="New" type="Button" parent="Main/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
text = "Nouvelle partie"

[node name="Continue" type="Button" parent="Main/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Continuer la partie"

[node name="Multiplayer" type="Button" parent="Main/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multijoueur"

[node name="Options" type="Button" parent="Main/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Credits" type="Button" parent="Main/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cr√©dits"

[node name="Quit" type="Button" parent="Main/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../New")
text = "Quitter"

[node name="Test" type="Button" parent="Main/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "--Test--"

[node name="Multiplayer" parent="." instance=ExtResource("3_8c6ax")]
visible = false
layout_mode = 1

[node name="Options" parent="." instance=ExtResource("4_41hkr")]
visible = false
layout_mode = 1

[node name="NewGame" parent="." instance=ExtResource("5_vkava")]
visible = false
layout_mode = 1

[node name="Continue" parent="." instance=ExtResource("6_v7v2s")]
visible = false
layout_mode = 1

[node name="TestMenu" parent="." instance=ExtResource("7_te5ou")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Main/MarginContainer/MarginContainer/VBoxContainer/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Main/MarginContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Main/MarginContainer/MarginContainer/VBoxContainer/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="Main/MarginContainer/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main/MarginContainer/MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Main/MarginContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Main/MarginContainer/MarginContainer/VBoxContainer/Test" to="." method="_on_test_pressed"]
[connection signal="back_pressed" from="Multiplayer" to="." method="_on_multiplayer_back_pressed"]
[connection signal="back_pressed" from="Options" to="." method="_on_options_back_pressed"]
[connection signal="back_pressed" from="NewGame" to="." method="_on_new_game_back_pressed"]
[connection signal="back_pressed" from="Continue" to="." method="_on_continue_back_pressed"]
[connection signal="back_pressed" from="TestMenu" to="." method="_on_test_menu_back_pressed"]
